--- a/templates/accounts/order_details.html
+++ b/templates/accounts/order_details.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block content %}
-
+<div class="container">
+    <div class="row">
+{% include 'includes/dashboard_sidebar.html' %}
 <div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
     <div class="row invoice row-printable">
         <div class="col-md-12">
@@ -85,6 +87,8 @@
             <!-- End .panel -->
         </div>
         <!-- col-lg-12 end here -->
+    </div>
+</div>
     </div>
 </div>
 
