--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -17,14 +17,23 @@
         </ul>
         <ul class="navbar-nav">
             <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
-            <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us </a></li>
+            {%if user.id is not None %}
+                {%if user.is_staff  %}
+                <li><a href="{%url 'boxoffice'%}" class="nav-link"> <i class="fa fa-unlock-alt"></i> Area Riservata </a></li>
+                {%else%}
+                <li><a href="{%url 'boxoffice'%}" class="nav-link"> <i class="fa fa-lock"></i> Area Riservata </a></li>
+                {%endif%}
+            {%else%}
+                <li><a href="{%url 'home'%}" class="nav-link"> <i class="fa fa-lock"></i> Anonimo </a></li>
+            {%endif%}
+        </div>
         </ul> <!-- list-inline //  -->
       </div> <!-- navbar-collapse .// -->
     </div> <!-- container //  -->
     </nav>
     
     <section class="header-main border-bottom">
-        <div class="container">
+<div class="container">
     <div class="row align-items-center">
         <div class="col-lg-2 col-md-3 col-6">
             <a href="{% url 'home' %}" class="brand-wrap">
@@ -44,7 +53,9 @@
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
-        <a href="{% url 'store' %}" class="btn btn-outline-primary">Botteghino</a>
+        <div class="col-md-3 ">
+            <a href="{% url 'store' %}" class="btn btn-outline-primary">Botteghino</a>
+        </div>
         <div class="col-lg  col-md-6 col-sm-12 col">
             <form action="{%url 'search'%}" class="search" method="get">
                 <div class="input-group w-100">
@@ -87,6 +98,6 @@
                 </div> <!-- col.// -->
     </div> <!-- row.// -->
 
-        </div> <!-- container.// -->
+</div> <!-- container.// -->
     </section> <!-- header-main .// -->
     </header> <!-- section-header.// -->
