--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="container" style="margin-top: 50px;">
         <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
-        <h2 class="text-center">Payment Successful</h2>
+        <h2 class="text-center">Pagamento avvenuto con successo</h2>
         <br>
         <div class="text-center">
             <a href="{% url 'print_ticket'%}?order={{order.id}}" class="btn btn-success">Scarica - stampa i tuoi biglietti</a>
