--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -2,7 +2,8 @@
     <!--   SIDEBAR   -->
     <ul class="list-group">
         <a class="list-group-item {% if '/accounts/' == request.path %}active{% endif %} " href="{% url 'dashboard' %}"> Pannello di controllo  </a>
-        <a class="list-group-item {% if '/my_orders/' in request.path or '/order_detail/' in request.path %}active{% endif %}"  href="{% url 'my_orders' %}"> I miei Ordini </a>
+        <a class="list-group-item {% if '/my_orders/' in request.path or '/order_detail/' in request.path %}active{% endif %}"  
+        href="{% url 'my_orders' %}"> I miei Ordini e Biglietti </a>
         <a class="list-group-item {% if '/edit_profile/' in request.path %}active{% endif %}" href="{% url 'edit_profile' %}"> Il mio profilo </a>
         <a class="list-group-item {% if '/change_password/' in request.path %}active{% endif %}" href="{% url 'change_password' %}"> Cambia la Password </a>
     </ul>
