--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -16,27 +16,35 @@
                             <!-- place_order -->
                             <form action="{% url 'place_order' %}" method="post"> 
                                 {% csrf_token %}
-                                <div class="form-row">
-                                    <div class="col form-group">
-                                        <label for="">Nome</label>
-                                        <input type="text" name="first_name" class="form-control" value="{{ user_data.first_name }}"  required>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label >Nome</label>
+                                            <input type="text" name="first_name" class="form-control" value="{{ user_data.first_name }}"  required>
+                                        </div>
                                     </div>
-                                    <div class="col form-group">
-                                        <label for="">Cognome</label>
-                                        <input type="text" name="last_name" class="form-control" value="{{ user_data.last_name }}"  required>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="col form-group">
-                                        <label for="">Email</label>
-                                        <input type="email" name="email" class="form-control" value="{{ user_data.email }}"  required>
-                                    </div>
-                                    <div class="col form-group">
-                                        <label for="">Telefono</label>
-                                        <input type="text" name="phone" class="form-control" value="{{ user_data.phone }}"  required>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label >Cognome</label>
+                                            <input type="text" name="last_name" class="form-control" value="{{ user_data.last_name }}"  required>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-row">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label for="">Email</label>
+                                            <input type="email" name="email" class="form-control" value="{{ user_data.email }}"  required>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label for="">Telefono</label>
+                                            <input type="text" name="phone" class="form-control" value="{{ user_data.phone }}"  required>
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="row">
                                     <div class="col form-group">
                                         <label for="">Indirizzo linea 1</label>
                                         <input type="text" name="address_line_1" class="form-control" value="{{ user_data.address_line_1 }}"  required>
@@ -46,21 +54,27 @@
                                         <input type="text" name="address_line_2" class="form-control" value="{{ user_data.address_line_2 }}" >
                                     </div>
                                 </div>
-                                <div class="form-row">
-                                    <div class="col-4 form-group">
+                                <div class="row">
+                                    <div class="col">
+                                    <div class="form-group">
                                         <label for="">CAP</label>
                                         <input type="text" name="post_code" class="form-control" value="{{ user_data.post_code }}"  required>
                                     </div>
-                                    <div class="col-6 form-group">
+                                    </div>
+                                    <div class="col">
+                                    <div class="form-group">
                                         <label for="">Città</label>
                                         <input type="text" name="city" class="form-control" value="{{ user_data.city }}"  required>
                                     </div>
-                                    <div class="col-2 form-group">
+                                    </div>
+                                    <div class="col">
+                                    <div class="form-group">
                                         <label for="">Provincia</label>
                                         <input type="text" name="province" class="form-control" value="{{ user_data.province }}"  required>
                                     </div>
+                                    </div>
                                 </div>
-                                <div class="form-row">
+                                <div class="row">
                                     <label for="">Note su ordine</label>
                                     <textarea name="order_note" rows="2" class="form-control"></textarea>
                                 </div>
