Sviluppo dei report SIAE in corso, 50%

--- a/templates/boxoffice/obliterate_result.html
+++ b/templates/boxoffice/obliterate_result.html
@@ -13,7 +13,7 @@
 
         <button type="button" class="btn btn-success btn-lg btn-block">INGRESSO CONSENTITO</button>
         <br>
-        <H2 class="text-center">Ingresso consentito con biglietto {{ticket_number}.}</H2>
+        <H2 class="text-center">Ingresso consentito con biglietto {{ticket_number}}</H2>
         <br>
         <H2 class="text-center">Posto: {{ingresso.seat}}</H2>
 
