Simple change from Backing up before begin expoitations

--- a/templates/boxoffice/ticket_printed.html
+++ b/templates/boxoffice/ticket_printed.html
@@ -15,6 +15,13 @@
         </div>
     {%else%}
     <div class="row">
+        <div class="card">
+            <div class="card-title">
+                Lista dei biglietti stampati.
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <aside class="col-lg-9">
     <div class="card">
     <table class="table table-borderless table-shopping-cart">
